--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hola-template",
-  "homepage": "https://petar-cvit.github.io/petar-cvit.github.io",
+  "homepage": "https://petar-cvit.github.io/cyclops",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
