--- a/charts/demo/templates/services.yaml
+++ b/charts/demo/templates/services.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.name }}
+  name: {{ .Values.name }}-dependency
   labels:
     app: {{ .Values.name }}
 spec:
@@ -13,5 +13,5 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app: {{ .Values.name }}
+    app: {{ .Values.name }}-dependency
 {{- end }}
